# Legal-Document-RAG-Tool

./: .gitignore  FASTAPI_QUICKSTART.md  guide.txt  main.py  pyproject.toml  requirements.txt
data/chroma/: chroma.sqlite3
evals/: run.py
src/: config.py
src/api/: deps.py  main.py  schemas.py
src/ingest/: __init__.py  chunking.py  entities.py  pdf_loader.py
src/llm/: ollama_client.py
src/rag/: pipeline.py  prompts.py
src/vectorstore/: __init__.py  chroma_store.py
ui/: app.py
