[project]
name = "legal-doc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "langchain-text-splitters>=1.1.0",
    "ollama>=0.6.1",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.40.0",
]
